gatekeeper/constraints/disallowed-tags.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: container-disallowed-tags
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
      - monitoring
      - payments     
  parameters:
    tags:
      - latest
