gatekeeper/constraints/hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostNetwork
metadata:
  name: container-hostnetwork
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
